# psipy-public

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  azure-pipelines-staging.yml  azure-pipelines.yml  prerun.sh  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.azure/: distributable.yml  docker.yml  docs.yml
docs/: Makefile  conf.py  distribution.rst  docker.rst  example_google.py  howtodoc.rst  howtolog.rst  howtotest.rst  index.rst  installation.rst  rl.md
examples/: RProp_Demo.ipynb  roc.ipynb
examples/rl/: balance_hardware.py  basic_sway.py  nfq_hardware_swingup.py  plot_costs.py
examples/rl/cartpole_gyms/: nfq_growing_batch_cartpole.py  nfq_gym_cartpole.py  nfq_psiori_cartpole.py
examples/rl/core/: loop.py
examples/rl/knob/: nfqca_test.py  nfqs_test.py
examples/rl/pact/: eval_net.py  nfq_hardware_swingup.py
examples/rl/pact_cartpole/: bandit_swingup.py  cost_functions.py  joystick_controller.py  nfq_hardware_swingup.py  nfqca_hardware_swingup.py  (+1 more)
psipy/: __init__.py  __version__.py  conftest.py
psipy/core/: __init__.py  id_mixin.py  notebook_tools.py  np_utils.py  rate_schedulers.py  threading_utils.py  utils.py  welfords.py
psipy/nn/: __init__.py
psipy/rl/: __init__.py  bandit_loop_mp.py  cycle_manager.py  loop.py  neural_trainer.py
research/agent57/: ngu.py  train_cartpole.py
research/bandit_loop/: bandit_batch_experiment.py  bandit_best_experiment.py  bandit_loop_experiment.py  bandit_sway_experiment.py  bandit_train_all_arms_experiment.py  bandit_train_multiple_loops_experiment.py  cost_functions.py  eval_individual_arms.py  eval_loop_arms.py  item_getters.py  sway_cost_funcs.py
research/prioritization/: plot_prio_evaluation.py  prioritization_experiments.py
research/q_scaling/: plot_q_scaling_experiments.py  q_scaling_experiment.py
tools/: dictionary  graph2video.ipynb  img2qm.py  pypack
tools/docker/: Dockerfile  Dockerfile.base  jupyter_notebook_config.py  sensible.bash
(+152 files in other folders)
